Join bmesh operator connects to unrelated vert #41631

Closed
opened 2014-08-29 14:49:25 +02:00 by Daniel Salazar · 5 comments
Member

System Information
openSUSE 12.3 64bits
NVIDIA 480GTX SC
AMD FX-8350

Blender Version
Broken: a77b46f

Short description of error
I don't get this but the join operator seems to be confused about which verts to connect. first I thought it could be because of hidden verts (there are some in the demo file) but later i discovered that's not the cause.

Now I'm convinced it's the non-manifulness of this mesh :) But I need it this way so..

Exact steps for others to reproduce the error
Open Bug.blend
Enter edit mode
Press J

**System Information** openSUSE 12.3 64bits NVIDIA 480GTX SC AMD FX-8350 **Blender Version** Broken: a77b46f **Short description of error** I don't get this but the join operator seems to be confused about which verts to connect. first I thought it could be because of hidden verts (there are some in the demo file) but later i discovered that's not the cause. Now I'm convinced it's the non-manifulness of this mesh :) But I need it this way so.. **Exact steps for others to reproduce the error** Open [Bug.blend](https://archive.blender.org/developer/F107292/Bug.blend) Enter edit mode Press J
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton was assigned by Daniel Salazar 2014-08-29 14:49:25 +02:00
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo
Daniel Salazar changed title from Join bmesh operator confused by selected hidden verts to Join bmesh operator connects to unrelated vert 2014-08-29 14:52:57 +02:00

This issue was referenced by c1ec73f522

This issue was referenced by c1ec73f52218900b1ce101b3154816205aa75d0d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c1ec73f522.

Closed by commit c1ec73f522.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41631
No description provided.