Fix T41631: Connect acts on unrelated vert